<resources>
    <string name="filter_caution">"You cannot disable all filters"</string>
    <string name="app_name">NerecipeBet</string>
    <string name="button_add_description">buttonAdd</string>
    <string name="icon_background_description">icon_background</string>
    <string name="text_background">There is nothing here! Let is fix it</string>
    <string name="text_background1">There is nothing here! Let is fix it</string>
    <string name="text_hint">textHint</string>
    <string name="text_hint1">textHint</string>
    <string name="button_clear_filter">ClearFilter</string>
    <string name="title_hint">title_hint</string>
    <string name="author_name_hint">author_hint</string>
    <string name="text_recipe_hint">text_recipe_hint</string>
    <string name="text_background2"><b>Recipes not found!Please push Clear Filter button</b></string>
    <string name="button_save_description">buttonSave_description</string>
    <string name="button_apply_text">button_apply_text</string>
    <string name="menu_options_description">menu_options_description</string>
    <string name="button_favorite_description">button_favorite_description</string>
    <string name="category_recipe_hint">category_hint</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="favorites">Favorites</string>
    <string name="all_recipes">AllRecipes</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="recipe_image">recipe_image</string>
    <string name="recipe_overview">Receipt Overview</string>
    <string name="recipe_create">Create a recipe</string>
    <string name="search_hint">search recipe</string>
    <string name="text_hint2">Recipes no found? Let\'s create the new one</string>
    <string name="european_category">European</string>
    <string name="asian_category">Asian</string>
    <string name="panasian_category">Panasian</string>
    <string name="eastern_category">Eastern</string>
    <string name="american_category">American</string>
    <string name="russian_category">Russian</string>
    <string name="miditerranean_category">Mediterranean</string>
    <string name="caution_filling">All fields must be filled in</string>
    <string name="from_camera">Camera</string>
    <string name="from_gallery">Gallery</string>
</resources>