<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.netology.nerecipebet.ui.FeedRecipeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:backgroundTint="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topMenu"
            android:backgroundTint="@color/teal_700"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />

        <SearchView
            android:id="@+id/searchView"
            android:icon="@drawable/icon_search"
            android:title="@string/search"
            android:queryHint="@string/search_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:iconifiedByDefault="false"
            app:backgroundTint="@color/lightGray"/>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRecipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bottomToolbar"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:id="@+id/icon_background1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/icon_background_description"
        android:src="@drawable/feedno"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/textBackground1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textBackground1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_background1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textHint1"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:text="@string/text_hint1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textBackground1"
        tools:visibility="visible" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/button_add_description"
        app:backgroundTint="#5881F1"
        app:layout_constraintBottom_toTopOf="@id/bottomToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

      <Button
        android:id="@+id/buttonClearFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_filter"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/bottomToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/botton_menu"
        />

</androidx.constraintlayout.widget.ConstraintLayout>